--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-<h1> Hi, I'm Julian! </h1>
-<head>
+<meta charset="utf-8">
+<title>My Website</title>
+<link href="bootstrap.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+<nav class="toppanel">&nbsp; 
+<span id="TopSpan"> HI, I'M JULIAN - NICE TO MEET YOU!</span>
+<a href="https://www.facebook.com/julian.vall.12"><img id="fbicon" src="images/facebook.png" width="60" height="60" alt=""/></a>
+<a href="https://twitter.com/JulianVall1"><img id="twittericon" src="images/twitter.png" width="43" height="43" alt=""/></a>
+<a href="https://www.linkedin.com/in/julian-vallyeason-b57446129"><img id="linkedinicon" src="images/linkedin.png" width="40" height="40" alt=""/></a>
+<a href="https://github.com/jvallyea"><img id="githubicon" src="images/github.png" width="45" height="45" alt=""/></a>
+<a href="https://angel.co/julian-vallyeason"><img id="angellisticon" src="images/angellist.png" width="50" height="50" alt=""/></a>
+</nav>
+<div id="TagImage"> 
+<img id="tagimage" src="images/tagimage.jpg" width="100%" height="410" alt=""/> </div>
+<div id="descriptionholder">
+	<p id="description" style="font-size:36px" align="center"><br></br> My name is <strong style="color:red"> Julian Vallyeason</strong>, and I am a sophomore at <em style="color:saddlebrown">Brown University</em><br>looking to concentrate in <strong style="color:darkorange"> Chemical Engineering</strong> and <strong style="color:cadetblue">Applied Mathematics-Economics.</strong><br><br> I love to mess around with things <em style="color:aquamarine">(photos, videos, software, music)</em> - I could name more, but I think you get the idea. Just lookin' to change the world, one idea at atime. <br> <br> I can become really interested in anything - as long as you find it interesting, I probably will too! But most importantly, I like to experience and think of new things! </p>
+</div>
+<div id="boxholder">
+	<p style="color:aliceblue" align="center"> A GrabBag of things that interest me / that I've done / that I want to do / other ... basically anything</p>
+</div>
+</body>
 </html>
