--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 <nav class="toppanel">&nbsp; 
-<span id="TopSpan"> HI, I'M JULIAN - NICE TO MEET YOU!</span>
+<span id="TopSpan"> HI! NICE TO MEET YOU! </span>
 <a href="https://www.facebook.com/julian.vall.12"><img id="fbicon" src="images/facebook.png" width="60" height="60" alt=""/></a>
 <a href="https://twitter.com/JulianVall1"><img id="twittericon" src="images/twitter.png" width="43" height="43" alt=""/></a>
 <a href="https://www.linkedin.com/in/julian-vallyeason-b57446129"><img id="linkedinicon" src="images/linkedin.png" width="40" height="40" alt=""/></a>
