--- a/index.html
+++ b/index.html
@@ -1,20 +1,38 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>My Website</title>
-<link href="bootstrap.css" rel="stylesheet" type="text/css">
-</head>
 
+<!DOCTYPE html>
+<html>
+<title>Coming Soon</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="bootstrap.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+body,h1 {font-family: "Raleway", sans-serif}
+body, html {height: 100%}
+.bgimg {
+    background-image: url('background.jpg');
+    min-height: 100%;
+    background-position: center;
+    background-size: cover;
+}
+</style>
 <body>
-<nav class="toppanel">&nbsp; 
-<span id="TopSpan"> HI! NICE TO MEET YOU! </span>
-<a href="https://www.facebook.com/julian.vall.12"><img id="fbicon" src="images/facebook.png" width="60" height="60" alt=""/></a>
-<a href="https://twitter.com/JulianVall1"><img id="twittericon" src="images/twitter.png" width="43" height="43" alt=""/></a>
-<a href="https://www.linkedin.com/in/julian-vallyeason-b57446129"><img id="linkedinicon" src="images/linkedin.png" width="40" height="40" alt=""/></a>
-<a href="https://github.com/jvallyea"><img id="githubicon" src="images/github.png" width="45" height="45" alt=""/></a>
-<a href="https://angel.co/julian-vallyeason"><img id="angellisticon" src="images/angellist.png" width="50" height="50" alt=""/></a>
-</nav>
+
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+
+  <div class="w3-display-middle">
+    <h1 class="w3-jumbo w3-adminate-top"> HOMEPAGE COMING SOON </h1>
+    <hr class="w3-border-black" style="margin:auto;width:40%">
+  </div>
+  <a href="julian/index.html">
+  <div class="w3-button w3-display-bottommiddle">
+  <h1 class="w3-jumbo" style="color:white"> Click here for a temporary fix </h1>
+  </div>
+</a>
+
+</div>
+
+
 
 </body>
 </html>
