--- a/julian/index.html
+++ b/julian/index.html
@@ -26,6 +26,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <img src="images/julian.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-topleft w3-container w3-text-black">
             <h2>Julian Vallyeason</h2>
+            <a href="Julian Vallyeason Resume.pdf"> <button class="w3-button w3-black w3-margin-bottom"> PDF Resume </button>
           </div>
         </div>
         <div class="w3-container">
@@ -61,7 +62,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>Cofounder and Project Engineer - Cloud Agronomics</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep 2016 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>Founded a solar-powered UAV startup that leverages proprietary imaging technology to provide aerial data acquisition services. </p>
-          <p> Managed UAV financing and development; Recipient of Brown's Social Innovation Explore Grant; Penn Aerospace Finalist; Startup Storm International Finalist </p>
+          <p> Managed UAV financing and development; Recipient of Brown's Social Innovation Explore Grant; Penn Aerospace Finalist; Startup Storm International Finalist, Hult@Brown 1st Place</p>
           <p> Visit <a href="http://www.cloudagronomics.com"> Cloud Agronomics </a> for more info! </p>
           <hr>
         </div>
