--- a/Projects/index.html
+++ b/Projects/index.html
@@ -65,14 +65,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="Images/Braille_Cover.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="Images/Braille_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Louis - A Dynamic Braille Reader</b></p>
         <p>Louis gives vision to the visually impaired by translating images into text (both audio and Braille).</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="Images/Newsmap_Cover.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="Images/Newsmap_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>NewsMap - Visualizing Tomorrow's Global Headlines </b></p>
         <p>Newsmap cartographically displays global news sentiment and tone in over 65 languages.</p>
@@ -83,21 +83,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Second Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="Images/Voltworks_Cover.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="Images/Voltworks_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>VoltWorks - A Soil-Based Microbial Fuel Cell</b></p>
         <p>Borne from a yearlong independent research project, VoltWorks seeks to apply microbial fuel cells to agricultural waste management.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="Images/Crayfish_Cover.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="Images/Crayfish_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Neuroscience Research on Crayfish</b></p>
         <p>For over a year, I researched the role of sensory signals in crayfish dominance hierarchies at the University of Maryland (Herberholz Lab).</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="Images/Quadcopter_Cover.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="Images/Quadcopter_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Quadcopter Obstacle Course</b></p>
         <p>For our engineering dynamics capstone project, we developed a dynamic MATLAB script to help a quadcopter navigate a series of obstacles.</p>
