--- a/Projects/index.html
+++ b/Projects/index.html
@@ -58,7 +58,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="Images/UAV_Cover.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href="CloudAgronomics/index.html"> <img src="Images/UAV_Cover.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
       <div class="w3-container w3-white">
         <p><b>Cloud Agronomics - A Solar-Powered UAV</b></p>
         <p>Together, we built a custom solar-powered drone, equipped with multispectral imaging technology and a 24-hour flight time..</p>
