--- a/Projects/CloudAgronomics/index.html
+++ b/Projects/CloudAgronomics/index.html
@@ -142,7 +142,7 @@
 <div class="w3-quarter">
 <div class="w3-card w3-white">
   <img src="Images/engn1.jpg" alt="Cinque Terre" style="width:100%;max-height:350px">
-  <img src="Images/engn2.jpg" alt="Cinque Terre" style="width:100%;max-height:350px">
+  <img src="Images/engn2.JPG" alt="Cinque Terre" style="width:100%;max-height:350px">
   <div class="w3-container">
   <h3>Engineering</h3>
   <h5>Wing</h5>
@@ -181,7 +181,7 @@
       <h3>Address</h3>
       <p>We'd love to meet you!</p>
       <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i>  Providence, RI</p>
-      <p><i class="fa fa-phone w3-text-teal w3-xlarge"></i>  +1 571 2965740</p>
+      <p><i class="fa fa-phone w3-text-teal w3-xlarge"></i>  +1 703 65169630</p>
       <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  julian@vallyeason.com</p>
     </div>
     <div class="w3-col m7">
