--- a/Projects/index.html
+++ b/Projects/index.html
@@ -28,8 +28,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </div>
   <div class="w3-panel w3-large">
     <a href="https://www.facebook.com/julian.vall.12"> <i class="fa fa-facebook-official w3-hover-opacity"></i> </a>
-    <a href="https://www.linkedin.com/in/julian-vallyeason-b57446129"> <i class="fa fa-twitter w3-hover-opacity"></i> </a>
-    <a href="https://twitter.com/JulianVall1"> <i class="fa fa-linkedin w3-hover-opacity"></i> </a>
+    <a href="https://www.twitter.com/JulianVall1"> <i class="fa fa-twitter w3-hover-opacity"></i> </a>
+    <a href="https://www.linkedin.com/in/julian-vallyeason-b57446129"> <i class="fa fa-linkedin w3-hover-opacity"></i> </a>
   </div>
 </nav>
 
