--- a/Projects/CloudAgronomics/index.html
+++ b/Projects/CloudAgronomics/index.html
@@ -142,7 +142,7 @@
 <div class="w3-quarter">
 <div class="w3-card w3-white">
   <img src="Images/engn1.jpg" alt="Cinque Terre" style="width:100%;max-height:350px">
-  <img src="Images/engn2.JPG" alt="Cinque Terre" style="width:100%;max-height:350px">
+  <img src="Images/engn2.jpg" alt="Cinque Terre" style="width:100%;max-height:350px">
   <div class="w3-container">
   <h3>Engineering</h3>
   <h5>Wing</h5>
@@ -156,7 +156,7 @@
 <div class="w3-quarter">
 <div class="w3-card w3-white">
   <img src="Images/prize1.jpg" alt="Monterosso" style="width:100%;max-height:350px">
-  <img src="Images/prize2.jpg" alt="Monterosso" style="width:100%;max-height:350px">
+  <img src="Images/prize2.JPG" alt="Monterosso" style="width:100%;max-height:350px">
   <div class="w3-container">
   <h3>Funding</h3>
   <h5>Competitions</h5>
