--- a/Projects/CloudAgronomics/index.html
+++ b/Projects/CloudAgronomics/index.html
@@ -116,13 +116,13 @@
 
 <div class="w3-quarter">
 <h2>How We Got Here</h2>
-<p>In the fall of 2016, the four of us met as engineering freshman at Brown. Through a series of mishaps (and exciting adventures), we discovered our mutual love of building things.</p>
-<p> Together, we decided to embark on a project to push us beyond our comfort zone: a fully autonomous solar-powered aircraft. We didn't know where it would go, or if we could accomplish even build it. </p>
+<p>In the fall of 2016, the four of us met as engineering freshmen at Brown. Through a series of mishaps (and exciting adventures), we discovered our mutual love of building things.</p>
+<p> Together, we decided to embark on a project to step out of our comfort zone: a fully autonomous solar-powered aircraft. We didn't know where it would go, or if we could even build it. </p>
 <p> Over the next year, we managed to secure a maker space and raise funds as researchers from the Humanity Centered Robotics Initiative (HCRI), the Nelson Center for Entrepreneurship, and the Department of Engineering at Brown. </p>
 <p> Building a UAV as four undergraduates was a tremendous task! We enlisted help from various mentors from Boeing, NASA, and Atlas to build our UAV, and received a solar panel donation from US SolarWorks, a local solar panel company. </p>
 <p> Last fall, we ran our first test flights, and have begun working with the Kellner Lab at Brown's Institute for Environment and Society (IBES) to apply our UAV to monitor crop health for farmers in the Providence area. </p>
 <p> We've been incredibly to have had the opportunity to present our engineering work and entrepreneurial venture at various competitions including Princeton Envision, the Penn Aerospace Pitch Competition, Startup Storm, and Hult at Brown. </p>
-<p> In the future, we look forward to see the shape our project takes, but we are confident that whether it goes toward a business, research endeavor, or just a cool plane, the four of us will remain close friends and classmates. </p>
+<p> In the future, we hope to see our project take shape, and are confident that no matter how it pans out, the four of us will remain close friends and classmates. </p>
 </div>
 
 <div class="w3-quarter">
