--- a/Projects/index.html
+++ b/Projects/index.html
@@ -65,7 +65,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="Images/Braille_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href="Louis/index.html"> <img src="Images/Braille_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
       <div class="w3-container w3-white">
         <p><b>Louis - A Dynamic Braille Reader</b></p>
         <p>Louis gives vision to the visually impaired by translating images into text (both audio and Braille).</p>
