--- a/Projects/Louis/index.html
+++ b/Projects/Louis/index.html
@@ -95,7 +95,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <!-- About Section -->
   <div class="w3-container w3-padding-32 w3-center">
     <h3>About the Team</h3><br>
-    <img src="Images/squad.jpg" alt="Me" class="w3-image" style="max-width:100%; max-height: 333px">
+    <img src="Images/squad.JPG" alt="Me" class="w3-image" style="max-width:100%; max-height: 333px">
     <div class="w3-padding-32">
       <h4><b>4 Engineering Undergraduates</b></h4>
       <h6><i>We've stuck together through thick and thin - and we've come out smarter, wiser, and closer!</i></h6>
@@ -107,7 +107,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
       <p> Braille pieces were printed on octagons, where each face had one of 8 permutations of the 3-dot system. Thus, as the octagon rotates, so too does the text being displayed. </p>
       <p> A camera attached to a Raspberry pi fed images into Google's Vision API, along with Microsoft's Azure API to summarize the image with a caption under 5 words. This caption was then displayed on Louis' Braille face. </p>
       <p> We are currently working to develop a dynamic interface, where Louis can be used to assist the visually impaired in checking social media and email as well. </p>
-      <p> To find out more, please visit http://www.github.com/jvallyea/Louis or contact me directly. </p> 
+      <p> To find out more, please visit http://www.github.com/jvallyea/Louis or contact me directly. </p>
     </div>
   </div>
   <hr>
