--- a/Projects/index.html
+++ b/Projects/index.html
@@ -72,7 +72,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="Images/Newsmap_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href="NewsMap/index.html"> <img src="Images/Newsmap_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
       <div class="w3-container w3-white">
         <p><b>NewsMap - Visualizing Tomorrow's Global Headlines </b></p>
         <p>Newsmap cartographically displays global news sentiment and tone in over 65 languages.</p>
