--- a/Projects/NewsMap/index.html
+++ b/Projects/NewsMap/index.html
@@ -65,8 +65,8 @@ img {margin-bottom: -8px;}
         For business-minded users, we have integrated our platform with NASDAQ's Data-on-Demand API, to correlate the news activity of companies with stock performance.
         We hope that you will be able to use our platform to learn more about bias in the way news is presented across the world, and what we can do to better understand how to form a wholesome view of the world we live in.
         In the future, we hope to include new, cutting-edge features such as machine-learning predictive features to identify regions for corporate growth and risk and more efficient data compression to visualize longer periods of news data.</p>
-      <a href="https://newsmap2017.herokuapp.com/"> <button class="w3-button w3-light-grey w3-padding-large w3-section w3-hide-small">
-        <i class="fa fa-download"></i> Visit NewsMap
+      <a href="https://devpost.com/software/newsmap-zl5f0r"> <button class="w3-button w3-light-grey w3-padding-large w3-section w3-hide-small">
+        <i class="fa fa-download"></i> Visit DevPost
       </button>
     </a>
       <a href="https://www.github.com/jvallyea/Newsmap"> <button class="w3-button w3-light-grey w3-padding-large w3-section w3 hide-small">View Github Code </button> </a>
