--- a/Projects/index.html
+++ b/Projects/index.html
@@ -90,7 +90,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="Images/Crayfish_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href="UMD"> <img src="Images/Crayfish_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
       <div class="w3-container w3-white">
         <p><b>Neuroscience Research on Crayfish</b></p>
         <p>For over a year, I researched the role of sensory signals in crayfish dominance hierarchies at the University of Maryland (Herberholz Lab).</p>
