--- a/Projects/UMD/index.html
+++ b/Projects/UMD/index.html
@@ -75,13 +75,13 @@
 						<div class="row 150%">
 							<div class="6u 12u$(xsmall)">
 								<div class="image fit captioned">
-									<img src="images/pic02.JPG" alt="" />
+									<img src="images/pic02.jpg" alt="" />
 									<h3>Olfactory stimulation heightens crustacean aggression.</h3>
 								</div>
 							</div>
 							<div class="6u$ 12u$(xsmall)">
 								<div class="image fit captioned">
-									<img src="images/pic03.JPG" alt="" />
+									<img src="images/pic03.jpg" alt="" />
 									<h3>Different species respond differently to sensory stimulation.</h3>
 								</div>
 							</div>
@@ -102,7 +102,7 @@
 						</header>
 						<div class="feature-grid">
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic04.JPG" alt="" /></div>
+								<div class="image rounded"><img src="images/pic04.jpg" alt="" /></div>
 								<div class="content">
 									<header>
 										<h4>Crayfish Attack</h4>
@@ -111,7 +111,7 @@
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic05.JPG" alt="" /></div>
+								<div class="image rounded"><img src="images/pic05.jpg" alt="" /></div>
 								<div class="content">
 									<header>
 										<h4>Initiate Tail Flip</h4>
@@ -120,7 +120,7 @@
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic06.JPG" alt="" /></div>
+								<div class="image rounded"><img src="images/pic06.jpg" alt="" /></div>
 								<div class="content">
 									<header>
 										<h4>Mid Tail Flip</h4>
@@ -129,7 +129,7 @@
 								</div>
 							</div>
 							<div class="feature">
-								<div class="image rounded"><img src="images/pic07.JPG" alt="" /></div>
+								<div class="image rounded"><img src="images/pic07.jpg" alt="" /></div>
 								<div class="content">
 									<header>
 										<h4>End Tail Flip</h4>
