--- a/Projects/index.html
+++ b/Projects/index.html
@@ -97,7 +97,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="Images/Quadcopter_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href="https://www.youtube.com/watch?v=GnasYgoSrk8"> <img src="Images/Quadcopter_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
       <div class="w3-container w3-white">
         <p><b>Quadcopter Obstacle Course</b></p>
         <p>For our engineering dynamics capstone project, we developed a dynamic MATLAB script to help a quadcopter navigate a series of obstacles.</p>
