--- a/index.html
+++ b/index.html
@@ -1,35 +1,240 @@
-<!DOCTYPE html>
-<html>
-<title>Coming Soon</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="bootstrap.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-    background-image: url('background.jpg');
-    min-height: 100%;
-    background-position: center;
-    background-size: cover;
-}
-</style>
-<body>
+<!doctype html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<!--
 
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+Template 2091 Ziggy
 
-  <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-adminate-top"> HOMEPAGE COMING SOON </h1>
-    <hr class="w3-border-black" style="margin:auto;width:40%">
-  </div>
-<a href="julian/index.html">
-  <button class="w3-button w3-white w3-margin-bottom">Web CV</button>
-</a>
-<a href="Projects/index.html">
-  <button class="w3-button w3-white w3-margin-bottom">Portfolio</button>
-</a>
+http://www.tooplate.com/view/2091-ziggy
+
+-->
+        <title>Julian Vallyeason - Home</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="css/fontAwesome.css">
+        <link rel="stylesheet" href="css/tooplate-style.css">
+
+        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    </head>
+    <body>
 
 
-</body>
+        <section class="first-section">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="text-content">
+                  <h1>Hi, I'm Julian!</h2>
+                  <div class="line-dec"></div>
+                  <span>---</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="second-section">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-3 col-sm-6">
+                <div class="service-item">
+                  <a href="JV.pdf"><div class="icon">
+                    <img src="img/first-emoji.png" alt="">
+                  </div></a>
+                  <h4>Quick Resume</h4>
+                  <p>Click above for a PDF copy of my short-form resume.</p>
+                </div>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                <div class="service-item">
+                  <a href="Projects/index.html"><div class="icon">
+                    <img src="img/second-emoji.png" alt="">
+                  </div></a>
+                  <h4>Projects</h4>
+                  <p>Click above for a web portfolio of my projects over the years.</p>
+                </div>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                <div class="service-item">
+                  <a href="julian/index.html"><div class="icon">
+                    <img src="img/third-emoji.png" alt="">
+                  </div></a>
+                  <h4>Web CV</h4>
+                  <p>Click above for a short-form web version of my CV.</p>
+                </div>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                <div class="service-item">
+                  <a href="https://www.github.com/jvallyea"><div class="icon">
+                    <img src="img/fourth-emoji.png" alt="">
+                  </div></a>
+                  <h4>Github</h4>
+                  <p>Click above to be taken to my Github - a code repository for my projects.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="third-section">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-10 col-md-offset-1">
+                <div class="left-image col-md-4">
+                  <img src="img/julian.png" alt="">
+                </div>
+                <div class="right-text col-md-8">
+                  <h4><em>Julian Vallyeason</em><br>About Me</h4>
+                  <p>As a rising junior at Brown University studying Engineering and Applied Math-Economics, I have found that the intersection of these fields is where my creativity flourishes. I have immersed myself in many projects with friends, where I have explored this intersection to find new ways to add and create value from my interests.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="fourth-section">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-3 col-sm-6">
+                <div class="portfolio-item first-item">
+                  <div class="image">
+                    <a href="img/item-big-one.jpg" data-lightbox="image-1"><img src="img/item-one.jpg"></a>
+                  </div>
+                  <div class="text">
+                    <span>Cloud Agronomics</span>
+                    <h4>A Solar-Powered UAV</h4>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                <div class="portfolio-item second-item">
+                  <div class="image">
+                    <a href="img/item-big-two.jpg" data-lightbox="image-1"><img src="img/item-two.jpg"></a>
+                  </div>
+                  <div class="text">
+                    <span>NewsMap</span>
+                    <h4>Visualizing Headlines</h4>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                <div class="portfolio-item third-item">
+                  <div class="image">
+                    <a href="img/item-big-three.jpg" data-lightbox="image-1"><img src="img/item-three.jpg"></a>
+                  </div>
+                  <div class="text">
+                    <span>Social Networks</span>
+                    <h4>Unseen Friends</h4>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                <div class="send-to-portfolio">
+                  <span>Do you want to see more?</span>
+                  <div class="primary-button">
+                    <a href="Projects/index.html">Visit porfolio</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="fivth-section">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-10 col-md-offset-1">
+                <div class="left-text col-md-8">
+                  <h4><em>Hobbies and Interests</em><br>Travel, Music, Sitcoms</h4>
+                  <p>If there ever were three things that I don't go a day without thinking about, it would be these three. Since I was little, I've wanted to travel to the remote places of the Earth, from the Bora Bora Islands to Mt. Kilimanjaro to Tasmania. Music - well who doesn't love music? Despite having been trained in classical and baroque piano and viola since a young age, I prefer modern pop. And I've probably re-watched each episode of The Big Bang Theory well over 5 times.</p>
+                </div>
+                <div class="right-image col-md-4">
+                  <img src="img/travel.png" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="sixth-section">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="row">
+                  <form id="contact" action="" method="post">
+                    <div class="col-md-6">
+                      <fieldset>
+                        <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required="">
+                      </fieldset>
+                    </div>
+                    <div class="col-md-6">
+                      <fieldset>
+                        <input name="email" type="email" class="form-control" id="email" placeholder="Your email..." required="">
+                      </fieldset>
+                    </div>
+                    <div class="col-md-12">
+                      <fieldset>
+                        <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..." required=""></textarea>
+                      </fieldset>
+                    </div>
+                    <div class="col-md-12">
+                      <fieldset>
+                        <button type="submit" id="form-submit" class="btn">Send Message</button>
+                      </fieldset>
+                    </div>
+                  </form>
+                </div>
+              </div>
+              <div class="col-md-5">
+                <div class="right-info">
+                  <ul>
+                    <li><a href="#"><i class="fa fa-envelope"></i>julian@vallyeason.com</a></li>
+                    <li><a href="#"><i class="fa fa-phone"></i>+1 703 651 6963</a></li>
+                    <li><a href="#"><i class="fa fa-map-marker"></i>Providence | Washington DC | Singapore | Malacca</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <footer>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <ul>
+                  <li><a href="https://www.facebook.com/julian.vall.12"><i class="fa fa-facebook"></i></a></li>
+                  <li><a href="https://twitter.com/julianvall1"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="https://www.linkedin.com/in/julian-vallyeason-b57446129"><i class="fa fa-linkedin"></i></a></li>
+                  <li><a href="#"><i class="fa fa-desktop"></i></a></li>
+                  <li><a href="https://www.github.com/jvallyea"><i class="fa fa-github"></i></a></li>
+                </ul>
+                <!-- <p>Copyright &copy; 2018
+
+                        | Design: <a href="http://www.tooplate.com" target="_parent">Borrowed</a></p> -->
+              </div>
+            </div>
+          </div>
+        </footer>
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+
+        <script src="js/vendor/bootstrap.min.js"></script>
+
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
+
+    </body>
 </html>
