--- a/Projects/index.html
+++ b/Projects/index.html
@@ -121,7 +121,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <h4><b>About Me</b></h4>
     <p>In high school, I didn't know what I wanted to do. From engineering to research to music, I had dabbled in a lot of fields, but hadn't found my calling. I thought I was OK - after all, I would have plenty of time to find my true passion later on. </p>
     <p> But as senior year rolled by, I started to panic. I had applied, and decided to go to Brown University to study Chemical Engineering and Economics, but I had no idea if that was what I liked. What if I never found anything? How could I go through life without any passion, or motivation to do anything? </p>
-    <o> I'm now in my 2nd year of college, and I've realized that my situation is not unqiue. I've met hundreds of other students who are in the same boat as me, having tried many things, but without finding something they truly loved. </p>
+    <o> I'm now in my 2nd year of college, and I've realized that my situation is not unique. I've met hundreds of other students who are in the same boat as me, having tried many things, but without finding something they truly loved. </p>
     <p> And while I still don't know what I want to do, I've been incredibly lucky to have found a supportive community, with whom I can work on projects, and continue to explore my interests (and hopefully find "the one")! </p>
     <p> You can find a copy of my resume below, and see my hodgepodge of different projects and interests over the years. </p>
     <hr>
