--- a/Projects/UMD/index.html
+++ b/Projects/UMD/index.html
@@ -32,7 +32,7 @@
 				<h2>Crayfish Behavior</h2>
 				<p>How do sensory signals affect crayfish behavior? <br /> Crayfish Behavior --> Human Behavior.</p>
 				<ul class="actions">
-					<li><a href="one" class="button special big">Get Started</a></li>
+					<!-- <li><a href="one" class="button special big">Get Started</a></li> -->
 					<li><a href="#one" class="button special big">Get Started</a></li>
 				</ul>
 			</section>
