--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@ http://www.tooplate.com/view/2091-ziggy
                 <div class="text-content">
                   <h1>Hi, I'm Julian!</h2>
                   <div class="line-dec"></div>
-                  <span>---</span>
+                  <span><div class="primary-button"><a href="#dive-in">Dive In</a></div></span>
                 </div>
               </div>
             </div>
           </div>
         </section>
 
-        <section class="second-section">
+        <section class="second-section" id="dive-in">
           <div class="container">
             <div class="row">
               <div class="col-md-3 col-sm-6">
