--- a/Projects/index2.html
+++ b/Projects/index2.html
@@ -58,49 +58,24 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding" id="one">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="CloudAgronomics/index.html"> <img src="Images/UAV_Cover.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
+      <a href="http://www.brownspace.org"> <img src="Images/BSE_Cover.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
       <div class="w3-container w3-white">
-        <p><b>Cloud Agronomics - A Solar-Powered UAV</b></p>
-        <p id="two">Together, we built a custom solar-powered drone, equipped with multispectral imaging technology and a 24-hour flight time..</p>
+        <p><b>Brown Space Engineering</b></p>
+        <p id="two">As the power subsystem lead, we have built the first open-source low-cost student satellite.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="Louis/index.html"> <img src="Images/Braille_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
+      <a href=""> <img src="Images/Music_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
       <div class="w3-container w3-white">
-        <p><b>Louis - A Dynamic Braille Reader</b></p>
-        <p>Louis gives vision to the visually impaired by translating images into text (both audio and Braille).</p>
+        <p><b>Classical Piano and Music Theory</b></p>
+        <p>Over 12 years, I have completed the Royal Conservatory of Music's Diploma and am pursuing an ARCT fellowship.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <a href="NewsMap/index.html"> <img src="Images/Newsmap_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
+      <a href=""> <img src="Images/InProgress_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
       <div class="w3-container w3-white">
-        <p><b>NewsMap - Visualizing Tomorrow's Global Headlines </b></p>
-        <p>Newsmap cartographically displays global news sentiment and tone in over 65 languages.</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Second Photo Grid-->
-  <div class="w3-row-padding" id="two">
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a href="VoltWorks"> <img src="Images/Voltworks_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
-      <div class="w3-container w3-white">
-        <p><b>VoltWorks - A Soil-Based Microbial Fuel Cell</b></p>
-        <p>Borne from a yearlong independent research project, VoltWorks seeks to apply microbial fuel cells to agricultural waste management.</p>
-      </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a href="UMD"> <img src="Images/Crayfish_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
-      <div class="w3-container w3-white">
-        <p><b>Neuroscience Research on Crayfish</b></p>
-        <p>For over a year, I researched the role of sensory signals in crayfish dominance hierarchies at the University of Maryland (Herberholz Lab).</p>
-      </div>
-    </div>
-    <div class="w3-third w3-container">
-      <a href="https://www.youtube.com/watch?v=GnasYgoSrk8"> <img src="Images/Quadcopter_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
-      <div class="w3-container w3-white">
-        <p><b>Quadcopter Obstacle Course</b></p>
-        <p>For our engineering dynamics capstone project, we developed a dynamic MATLAB script to help a quadcopter navigate a series of obstacles.</p>
+        <p><b>Ongoing Project </b></p>
+        <p>To be unveiled soon.</p>
       </div>
     </div>
   </div>
@@ -109,8 +84,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-center w3-padding-32">
     <div class="w3-bar">
       <a href="#" class="w3-bar-item w3-button w3-hover-black">«</a>
-      <a href="#" id="buttonone" class="w3-bar-item w3-black w3-button">1</a>
-      <a href="index2.html" class="w3-bar-item w3-button w3-hover-black">2</a>
+      <a href="index.html" id="buttonone" class="w3-bar-item w3-button w3-hover-black">1</a>
+      <a href="#" class="w3-bar-item w3-black w3-button">2</a>
       <a href="#" class="w3-bar-item w3-button w3-hover-black">3</a>
       <a href="#" class="w3-bar-item w3-button w3-hover-black">4</a>
       <a href="#" class="w3-bar-item w3-button w3-hover-black">»</a>
