--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ http://www.tooplate.com/view/2091-ziggy
                   <a href="JV.pdf"><div class="icon">
                     <img src="img/first-emoji.png" alt="">
                   </div></a>
-                  <h4>Quick Resume</h4>
+                  <h4>Resume</h4>
                   <p>Click above for a PDF copy of my short-form resume.</p>
                 </div>
               </div>
@@ -190,7 +190,7 @@ http://www.tooplate.com/view/2091-ziggy
                     </div>
                     <div class="col-md-12">
                       <fieldset>
-                        <button type="submit" id="form-submit" class="btn">Send Message</button>
+                        <a href="mailto:julian@vallyeason.com"> <button type="submit" id="form-submit" class="btn" onClick="sendEmail()">Send Message</button> </a>
                       </fieldset>
                     </div>
                   </form>
