--- a/Projects/index2.html
+++ b/Projects/index2.html
@@ -58,7 +58,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding" id="one">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="http://www.brownspace.org"> <img src="Images/BSE_Cover.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
+      <a href="http://www.brownspace.org"> <img src="Images/BSE_Cover.JPG" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
       <div class="w3-container w3-white">
         <p><b>Brown Space Engineering</b></p>
         <p id="two">As the power subsystem lead, we have built the first open-source low-cost student satellite.</p>
