--- a/Projects/CloudAgronomics/index.html
+++ b/Projects/CloudAgronomics/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Cloud Agronomics</title>
+<title>Solar-Powered UAV</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -199,7 +199,7 @@
         <input class="w3-input" type="text" name="Message" required>
       </div>
       <input class="w3-check" type="checkbox" checked name="Like">
-      <label>Subscribe to Cloud Agronomics' Newsletter!</label>
+      <label>Subscribe </label>
       <button type="submit" class="w3-button w3-right w3-theme">Send</button>
       </form>
     </div>
