--- a/Projects/CloudAgronomics/index.html
+++ b/Projects/CloudAgronomics/index.html
@@ -54,7 +54,7 @@
   <img src="Images/FrontLogo.jpg" alt="boat" style="width:100%;min-height:350px;max-height:500px;">
   <div class="w3-container w3-display-bottomleft w3-margin-bottom">
     <a href="https://www.cloudagronomics.com/">
-    <button class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Go To W3.CSS">CLOUD AGRONOMICS</button>
+    <button class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Go To W3.CSS">Solar-Powered UAV</button>
     </a>
   </div>
 </div>
