--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ http://www.tooplate.com/view/2091-ziggy
                   <a href="https://www.vallyeason.com/Projects"><div class="icon">
                     <img src="img/first-emoji.png" alt="">
                   </div></a>
-                  <h4>Resume</h4>
+                  <h4>Resume (PDF)</h4>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6">
@@ -68,7 +68,7 @@ http://www.tooplate.com/view/2091-ziggy
                   <a href="julian/index.html"><div class="icon">
                     <img src="img/third-emoji.png" alt="">
                   </div></a>
-                  <h4>Web CV</h4>
+                  <h4>Resume (HTML)</h4>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6">
