linkedin added to main

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@ http://www.tooplate.com/view/2091-ziggy
               </div>
               <div class="col-md-3 col-sm-6">
                 <div class="service-item">
-                  <a href="julian/index.html"><div class="icon">
+                  <a href="https://www.linkedin.com/in/julian-vallyeason"><div class="icon">
                     <img src="img/third-emoji.png" alt="">
                   </div></a>
-                  <h4>Resume (HTML)</h4>
+                  <h4>LinkedIn</h4>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6">
