--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ http://www.tooplate.com/view/2091-ziggy
             <div class="row">
               <div class="col-md-3 col-sm-6">
                 <div class="service-item">
-                  <a href="https://www.vallyeason.com/Projects"><div class="icon">
+                  <a href="Julian%20Vallyeason%20Resume.pdf"><div class="icon">
                     <img src="img/first-emoji.png" alt="">
                   </div></a>
                   <h4>Resume (PDF)</h4>
