--- a/index.html
+++ b/index.html
@@ -29,20 +29,43 @@ http://www.tooplate.com/view/2091-ziggy
     </head>
     <body>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  // Add smooth scrolling to all links
+  $("a").on('click', function(event) {
 
+    // Make sure this.hash has a value before overriding default behavior
+    if (this.hash !== "") {
+      // Prevent default anchor click behavior
+      event.preventDefault();
+
+      // Store hash
+      var hash = this.hash;
+
+      // Using jQuery's animate() method to add smooth page scroll
+      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 800, function(){
+
+        // Add hash (#) to URL when done scrolling (default click behavior)
+        window.location.hash = hash;
+      });
+    } // End if
+  });
+});
+</script>
+
+        <a href="#dive-in">
         <section class="first-section">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <div class="text-content">
-                  <h1>Hi, I'm Julian!</h2>
-                  <div class="line-dec"></div>
-                  <span><div class="primary-button"><a href="#dive-in">Dive In</a></div></span>
-                </div>
               </div>
             </div>
           </div>
-        </section>
+        </section> </a>
 
         <section class="second-section" id="dive-in">
           <div class="container">
