--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ $(document).ready(function(){
   });
 });
 </script>
-
+<div class="fullspan">
         <a href="#dive-in">
         <section class="first-section">
           <div class="container">
@@ -75,7 +75,7 @@ $(document).ready(function(){
                   <a href="Julian%20Vallyeason%20Resume.pdf"><div class="icon">
                     <img src="img/first-emoji.png" alt="">
                   </div></a>
-                  <h4>Resume (PDF)</h4>
+                  <h4><b>Resume (PDF)</b></h4>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6">
@@ -83,7 +83,7 @@ $(document).ready(function(){
                   <a href="Projects/index.html"><div class="icon">
                     <img src="img/second-emoji.png" alt="">
                   </div></a>
-                  <h4>Projects</h4>
+                  <h4><b>Projects</b></h4>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6">
@@ -91,7 +91,7 @@ $(document).ready(function(){
                   <a href="https://www.linkedin.com/in/julian-vallyeason"><div class="icon">
                     <img src="img/third-emoji.png" alt="">
                   </div></a>
-                  <h4>LinkedIn</h4>
+                  <h4><b>LinkedIn</b></h4>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6">
@@ -99,12 +99,13 @@ $(document).ready(function(){
                   <a href="https://www.github.com/jvallyea"><div class="icon">
                     <img src="img/fourth-emoji.png" alt="">
                   </div></a>
-                  <h4>Github</h4>
+                  <h4><b>Github</b></h4>
                 </div>
               </div>
             </div>
           </div>
         </section>
+      </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
